Remove PerfectScrollbar from content, fixes #21

--- a/src/App.less
+++ b/src/App.less
@@ -5,10 +5,6 @@
 @import './themes/common.less';
 @import './themes/ant.less';
 
-body {
-  overflow: hidden;
-}
-
 .border-right {
   border-right-width: 1px;
   border-right-color: @border-color-split;
